# Slotify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  extensibility.md  guide.en.md  guide.ru.md  integration-notes.en.md  integration-notes.ru.md  limitations.md  overview.md  quickstart.md  roadmap.md
examples/: basic_usage.py  cancel_merge_demo.py  conflicts_and_rules_demo.py  merge_split_demo.py
src/slotify/: __init__.py  exceptions.py
src/slotify/adapters/: __init__.py
src/slotify/domain/: __init__.py  models.py  recurrence.py  time.py
src/slotify/engine/: __init__.py  commands.py  scheduler.py
src/slotify/rules/: __init__.py  base.py  builtin.py  engine.py
src/slotify/storage/: __init__.py  adapters.py  base.py  memory.py
src/slotify/strategies/: __init__.py  base.py  helpers.py  slots.py
src/slotify_django/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  models.py  services.py
src/slotify_django/migrations/: 0001_initial.py
tests/: test_schedkit.py  test_slotify_django.py
