[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "slotify"
version = "0.1.0"
description = "Headless scheduling and time-slot engine for Python applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = [
  "booking",
  "calendar",
  "schedule",
  "scheduler",
  "slots",
  "time-range",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.urls]
Homepage = "https://github.com/example/slotify"
Documentation = "https://github.com/example/slotify/tree/main/docs"
Repository = "https://github.com/example/slotify"
Issues = "https://github.com/example/slotify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slotify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

