[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "slotify-engine"
version = "0.1.0"
description = "Headless scheduling and time-slot engine for Python applications."
readme = { file = "README.en.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Slotify contributors" }
]
keywords = [
  "booking",
  "calendar",
  "schedule",
  "scheduler",
  "slots",
  "time-range",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/QuillishMorrison/Slotify"
Documentation = "https://github.com/QuillishMorrison/Slotify/tree/main/docs"
Repository = "https://github.com/QuillishMorrison/Slotify"
Issues = "https://github.com/QuillishMorrison/Slotify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slotify"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/README.en.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
